# kasa-provisioner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  lessons.md
docs/adr/: adr-001-library-strategy.md  adr-002-wifi-management.md  adr-003-bootstrap-protocol.md
docs/runbooks/: guide-provisioning.md
docs/troubleshooting/: ep10-bootstrap-fw105.md
src/kasa_provisioner/application/: bootstrap.py  control.py  discovery.py
src/kasa_provisioner/cli/: main.py
src/kasa_provisioner/domain/: exceptions.py  models.py
src/kasa_provisioner/infra/: legacy_client.py
tests/unit/: test_bootstrap.py  test_legacy_client.py
